all files are added

--- a/advance5.html
+++ b/advance5.html
@@ -75,7 +75,7 @@
         const accounts = [];
         const accountForm = document.querySelector("#accountForm");
         const customerName = document.querySelector("#customerName");
-        const balance = document.querySelector("#balance");
+        const balance = document.qubrancherySelector("#balance");
 
 
         accountForm.addEventListener('submit',(e)=>{
